--- a/frontend/creer-profil.html
+++ b/frontend/creer-profil.html
@@ -210,6 +210,7 @@
 
       output.hidden = false;
       output.textContent = JSON.stringify(json, null, 2);
+      localStorage.setItem('profile', JSON.stringify(json));
 
       setTimeout(() => {
         if (type === "association") {
